--- a/index.html
+++ b/index.html
@@ -2,12 +2,28 @@
 <html lang="da">
   <head>
     <meta charset="UTF-8" />
-    <title>Vejr App</title>
+    <title>Vejr App Mobil</title>
+    <link rel="stylesheet" href="global.css" />
   </head>
   <body>
-    <input id="cityInput" type="text" placeholder="Søg by..." />
-    <ul id="suggestions"></ul>
-    <pre id="result"></pre>
+    <div class="container">
+      <input id="cityInput" type="text" placeholder="Søg by..." />
+      <ul id="suggestions"></ul>
+      <div class="hourly-container">
+        <div class="hourly-scroll" id="hourlyScroll">
+          <!-- Hourly bokse indsættes dynamisk her -->
+        </div>
+      </div>
+      <div id="weatherGrid" class="grid">
+        <div class="box" id="uvBox"></div>
+        <div class="box" id="sunriseBox"></div>
+        <div class="box" id="sunsetBox"></div>
+        <div class="box" id="feelsBox"></div>
+        <div class="box" id="windBox"></div>
+      </div>
+
+      <pre id="result"></pre>
+    </div>
 
     <script src="app.js"></script>
   </body>
