--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Vejr App Mobil</title>
     <link rel="stylesheet" href="global.css" />
+    <script src="app.js" defer></script>
   </head>
   <body>
     <div class="container">
@@ -25,6 +26,6 @@
       <pre id="result"></pre>
     </div>
 
-    <script src="app.js"></script>
+
   </body>
 </html>
