--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Vejr App Mobil</title>
     <link rel="stylesheet" href="global.css" />
     <script src="app.js" defer></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   </head>
   <body>
     <div class="container">
