--- a/index.html
+++ b/index.html
@@ -1,32 +1,69 @@
 <!DOCTYPE html>
 <html lang="da">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Vejr App Mobil</title>
-    <link rel="stylesheet" href="global.css" />
-    <script src="app.js" defer></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  </head>
-  <body>
-    <div class="container">
-      <input id="cityInput" type="text" placeholder="Søg by..." />
-      <ul id="suggestions"></ul>
-      <div class="hourly-container">
-        <div class="hourly-scroll" id="hourlyScroll">
-          <!-- Hourly bokse indsættes dynamisk her -->
-        </div>
-      </div>
-      <div id="weatherGrid" class="grid">
-        <div class="box" id="uvBox"></div>
-        <div class="box" id="sunriseBox"></div>
-        <div class="box" id="sunsetBox"></div>
-        <div class="box" id="feelsBox"></div>
-        <div class="box" id="windBox"></div>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <title>Vejr App Mobil</title>
+  <link rel="stylesheet" href="global.css" />
+  
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 
-      <pre id="result"></pre>
+  <script src="app.js" defer></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+</head>
+<body>
+  <div class="container">
+    <input id="cityInput" type="text" placeholder="Søg by..." />
+    <ul id="suggestions"></ul>
+    <div class="hourly-container">
+      <div class="hourly-scroll" id="hourlyScroll">
+        <!-- Hourly bokse indsættes dynamisk her -->
+      </div>
+    </div>
+    <div id="weatherGrid" class="grid">
+      <div class="box" id="uvBox"></div>
+      <div class="box" id="sunriseBox"></div>
+      <div class="box" id="sunsetBox"></div>
+      <div class="box" id="feelsBox"></div>
+      <div class="box" id="windBox"></div>
     </div>
 
+    <pre id="result"></pre>
+  </div>
+  
+  <nav>
+    <div class="nav-link-wrapper" onclick="openProfile()">
+      <span class="material-symbols-rounded nav-icon active">person</span>
+      <p>Mine oplysninger</p>
+    </div>
 
-  </body>
+    <div class="nav-divider"></div>
+
+    <div class="nav-link-wrapper" onclick="openFavorite()">
+      <span class="material-symbols-rounded nav-icon">star</span>
+      <p>Gemte lokationer</p>
+    </div>
+
+    <div class="nav-divider"></div>
+
+    <div class="nav-link-wrapper" onclick="openSettings()">
+      <span class="material-symbols-rounded nav-icon">settings</span>
+      <p>Indstillinger</p>
+    </div>
+  </nav>
+
+
+  <div class="overlay-container" id="overlay-profile">
+    <span class="material-symbols-rounded nav-icon">close</span>
+  </div>
+
+  <div class="overlay-container" id="overlay-favorite">
+    <span class="material-symbols-rounded nav-icon">close</span>
+  </div> 
+
+  <div class="overlay-container" id="overlay-settings">
+    <span class="material-symbols-rounded nav-icon">close</span>
+  </div>
+
+</body>
 </html>
