--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
 
 
   <div class="overlay-container" id="overlay-profile">
-    <span class="material-symbols-rounded nav-icon">close</span>
+    <span class="material-symbols-rounded close-icon">close</span>
   </div>
 
   <div class="overlay-container" id="overlay-favorite">
-    <span class="material-symbols-rounded nav-icon">close</span>
+    <span class="material-symbols-rounded close-icon">close</span>
   </div> 
 
   <div class="overlay-container" id="overlay-settings">
-    <span class="material-symbols-rounded nav-icon">close</span>
+    <span class="material-symbols-rounded close-icon">close</span>
   </div>
 
 </body>
