--- a/amalie.html
+++ b/amalie.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="amalie.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+    />
   </head>
   <body>
+    <div class="searchContainer">
+      <input id="cityInput" type="text" placeholder="Søg efter by..." />
+      <ul id="suggestions" class="suggestions-list"></ul>
+    </div>
     <section class="cityView">
       <img src="" alt="" />
       <h1 class="cityName"></h1>
