data bokse style

--- a/amalie.html
+++ b/amalie.html
@@ -106,32 +106,32 @@
       <div class="data">
         <h2>Hvilke data ønsker du at se?</h2>
         <div class="data-containers">
-          <div class="uv dataStyle">
+          <div class="dataStyle">
             <div>
               <h3>Uv indeks</h3>
             </div>
           </div>
-          <div class="datastyle">
+          <div class="dataStyle">
             <div>
               <h3>Nedbør</h3>
             </div>
           </div>
-          <div class="datastyle">
+          <div class="dataStyle">
             <div>
               <h3>Vind</h3>
             </div>
           </div>
-          <div class="datastyle">
+          <div class="dataStyle">
             <div>
               <h3>Solnedgang</h3>
             </div>
           </div>
-          <div class="datastyle">
+          <div class="dataStyle">
             <div>
               <h3>Luftfugtighed</h3>
             </div>
           </div>
-          <div class="datastyle">
+          <div class="dataStyle">
             <div>
               <h3>Sigtbarhed</h3>
             </div>
