--- a/amalie.html
+++ b/amalie.html
@@ -12,9 +12,7 @@
   </head>
   <body>
     <nav>
-      <div
-        class="nav-link-wrapper"
-        onclick="openOverlay('overlay-profile', this)">
+      <div class="nav-link-wrapper" onclick="openOverlay('overlay-profile', this)">
         <span class="material-symbols-outlined nav-icon">person</span>
         <p>Mine oplysninger</p>
       </div>
