gennemtjekket og ændret navne

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vejrapp</title>
-    <link rel="stylesheet" href="amalie.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -120,7 +120,7 @@
     </section>
     <div class="overlay-container" id="overlay-profile">
       <span class="material-symbols-outlined close-icon">close</span>
-      <div class="data">
+      <div class="profileData">
         <h2>Mine oplysninger</h2>
         <form id="profileForm">
           <label for="profileName">Navn:</label>
@@ -210,6 +210,6 @@
         </select>
       </div>
     </div>
-    <script src="amalie.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
